# Unsharp-Masking-CLAHE

./: CMakeLists.txt  README.md  bmplib.cpp  bmplib.h  filter.cpp  filter_cuda.cu  filter_mpi.cpp  filter_omp.cpp  performance.ipynb  run_all_images.py  run_all_versions.py  test.md
results/: performance_data.json  performance_results.txt
